--- a/index.html
+++ b/index.html
@@ -819,5 +819,9 @@
   </script>
 </script>
 
+     <button id="theme-toggle">Toggle Dark Theme</button>
+
+    
+    <script src="script.js"></script>
 </body>
 </html>
