--- a/header.html
+++ b/header.html
@@ -446,6 +446,8 @@
         <img src="images/li_send.png" alt="send">
         <input type="email" placeholder="Enter your email address">
         <button>Subscribe</button>
+        <button id="theme-toggle">Toggle Dark Theme</button>
+         <script src="script.js"></script>
       </div>
     </div>
     <div class="hero-image">
